--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "spotify-web-api-node": "^5.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
