--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "lyrics-finder": "^21.7.0",
     "spotify-web-api-node": "^5.0.2"
